# autocomp

./: .gitignore  .scalafmt.conf  FAQ.md  PROTOCOLS.md  README.md  SETUP.md  build.sbt  paxos.csv
rust/: Cargo.toml  build.rs
rust/examples/auto_decoupling_functional/: leader.rs  responder.rs
rust/examples/auto_decoupling_monotonic/: collector.rs  leader.rs  main.rs  replica.rs
rust/examples/auto_decoupling_mutually_independent/: collector.rs  leader.rs  replica.rs
rust/examples/auto_decoupling_state_machine/: leader.rs  main.rs  responder.rs
rust/examples/auto_partitioning_cohashing/: leader.rs  replica.rs
rust/examples/auto_partitioning_dependencies/: leader.rs  replica.rs
rust/examples/auto_partitioning_partial/: coordinator.rs  leader.rs  main.rs  replica.rs
rust/examples/automultipaxos/: acceptor.rs  coordinator.rs  leader.rs  main.rs  p2a_proxy_leader.rs  p2b_proxy_leader.rs
rust/examples/autopbft_critical_path/: committer.rs  leader.rs  main.rs  preparer.rs  prepreparer.rs  proxy_leader.rs
rust/examples/autotwopc/: committer.rs  ender.rs  leader.rs  main.rs  participant_acker.rs  participant_voter.rs  vote_requester.rs
rust/examples/autovoting/: broadcaster.rs  collector.rs  leader.rs  main.rs  participant.rs
rust/examples/comppaxos/: acceptor.rs  leader.rs  main.rs  proxy_leader.rs
rust/examples/decoupling-functional/: leader.rs
rust/examples/decoupling-general/: leader.rs
rust/examples/decoupling-monotonic/: leader.rs
rust/examples/decoupling-state-machine/: leader.rs
rust/examples/decoupling_general/: main.rs  (+1 more)
rust/src/: lib.rs
(+262 files in other folders)
