[package]
name = "frankenpaxos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
prometheus_exporter = "0.8.5"
# KEEP THIS IN SYNC 
prometheus = { version = "0.13", features = ["process"] }
prost = "0.11.8"
serde_json = "1.0.94"
tokio = "1.26.0"
hydroflow = { path = "../../hydroflow/hydroflow", features = ["cli_integration"] }
hydroflow_datalog = { path = "../../hydroflow/hydroflow_datalog" }
bytes = "1"
rand = "0.8.5"

[build-dependencies]
prost-build = "0.11.8"